feat: add rspack plugin ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,8 @@ jobs:
             os: ubuntu-22.04
           - suite: nuxt
             os: ubuntu-22.04
+          - suite: plugin
+            os: ubuntu-22.04
       fail-fast: false
     runs-on: ${{ matrix.os }}
     name: ${{ matrix.suite }}
