--- a/.github/workflows/ecosystem-ci-from-commit.yml
+++ b/.github/workflows/ecosystem-ci-from-commit.yml
@@ -31,6 +31,7 @@ on:
           - rsbuild
           - examples
           - devserver
+          - plugin
       suiteRefType:
         description: "type of suite ref to use"
         required: true
@@ -107,6 +108,8 @@ jobs:
           - suite: devserver
             os: ubuntu-22.04
           - suite: nuxt
+            os: ubuntu-22.04
+          - suite: plugin
             os: ubuntu-22.04
       fail-fast: false
     runs-on: ${{ matrix.os }}
