--- a/.github/workflows/ecosystem-ci-selected.yml
+++ b/.github/workflows/ecosystem-ci-selected.yml
@@ -43,6 +43,7 @@ on:
           - rsdoctor
           - examples
           - devserver
+          - plugin
       suiteRefType:
         description: "type of suite ref to use"
         required: true
@@ -131,6 +132,8 @@ jobs:
           - suite: devserver
             os: ubuntu-22.04
           - suite: nuxt
+            os: ubuntu-22.04
+          - suite: plugin
             os: ubuntu-22.04
       fail-fast: false
     runs-on: ${{ matrix.os }}
