--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,7 @@ jobs:
             os: ubuntu-22.04
           - suite: nextjs
             os: ubuntu-22.04
+            shard: [1/7, 2/7, 3/7, 4/7, 5/7, 6/7, 7/7]
           - suite: lynx-stack
             os: ubuntu-22.04
       fail-fast: false
@@ -79,4 +80,5 @@ jobs:
       - run: >-
           pnpm tsx ecosystem-ci.ts
           run-suites
+          --shard ${{ matrix.shard }}
           ${{ matrix.suite }}
