--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,25 @@ jobs:
             os: ubuntu-22.04
           - suite: nextjs
             os: ubuntu-22.04
-            shard: [1/7, 2/7, 3/7, 4/7, 5/7, 6/7, 7/7]
+            shard: 1/7
+          - suite: nextjs
+            os: ubuntu-22.04
+            shard: 2/7
+          - suite: nextjs
+            os: ubuntu-22.04
+            shard: 3/7
+          - suite: nextjs
+            os: ubuntu-22.04
+            shard: 4/7
+          - suite: nextjs
+            os: ubuntu-22.04
+            shard: 5/7
+          - suite: nextjs
+            os: ubuntu-22.04
+            shard: 6/7
+          - suite: nextjs
+            os: ubuntu-22.04
+            shard: 7/7
           - suite: lynx-stack
             os: ubuntu-22.04
       fail-fast: false
@@ -80,5 +98,5 @@ jobs:
       - run: >-
           pnpm tsx ecosystem-ci.ts
           run-suites
-          --shard ${{ matrix.shard }}
+          ${{ matrix.shard && '--shard ' + matrix.shard || '' }}
           ${{ matrix.suite }}
