--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,15 @@ jobs:
           - suite: nextjs
             os: ubuntu-22.04
             shard: 7/7
+          - suite: nextjs
+            os: ubuntu-22.04
+            shard: 7/7
+          - suite: nextjs
+            os: ubuntu-22.04
+            shard: 7/7
+          - suite: nextjs
+            os: ubuntu-22.04
+            shard: 7/7
           - suite: lynx-stack
             os: ubuntu-22.04
       fail-fast: false
