--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "semver": "^7.3.8",
     "simple-git-hooks": "^2.8.1",
     "tsx": "^3.12.6",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "verdaccio": "^6.1.5"
   }
 }
