--- a/.github/workflows/ecosystem-ci-from-commit.yml
+++ b/.github/workflows/ecosystem-ci-from-commit.yml
@@ -28,6 +28,7 @@ on:
           # - nx
           - rspress
           - rslib
+          - rstest
           - rsbuild
           - examples
           - devserver
@@ -100,6 +101,8 @@ jobs:
           - suite: rspress
             os: ubuntu-22.04
           - suite: rslib
+            os: ubuntu-22.04
+          - suite: rstest
             os: ubuntu-22.04
           - suite: rsbuild
             os: ubuntu-22.04
