--- a/.github/workflows/ecosystem-ci-selected.yml
+++ b/.github/workflows/ecosystem-ci-selected.yml
@@ -40,6 +40,7 @@ on:
           - rspress
           - rsbuild
           - rslib
+          - rstest
           - rsdoctor
           - examples
           - devserver
@@ -122,6 +123,8 @@ jobs:
           - suite: rspress
             os: ubuntu-22.04
           - suite: rslib
+            os: ubuntu-22.04
+          - suite: rstest
             os: ubuntu-22.04
           - suite: rsbuild
             os: ubuntu-22.04
